# cse-analytics

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml  urls.json  urls_dpl.json  urls_rpe.json
.devcontainer/: devcontainer.json
app/: main.py  models.py
app/controllers/: data_extractor_controller.py  merge_financials_controller.py  pdf_download_controller.py
app/routes/: download_pdfs.py  extract_data.py  merge_financials.py
app/utils/: google_genai_client.py  mistral_client.py  openai_client.py
chatbot/: agentic_chatbot.py
chatbot/csvs/: dpl_quarterlies.csv  rpe_quarterlies.csv
output_files/dpl_data/: 30_06_2015.json  30_06_2016.json  30_06_2017.json  30_06_2018.json  30_06_2019.json  30_06_2020.json  30_06_2021.json  30_06_2022.json  30_06_2023.json  30_09_2013.json  30_09_2015.json  30_09_2016.json  30_09_2017.json  30_09_2018.json  30_09_2019.json  30_09_2020.json  30_09_2021.json  30_09_2022.json  30_09_2023.json  30_09_2024.json  31_03_2015.json  31_03_2016.json  31_03_2017.json  31_03_2018.json  31_03_2019.json  31_03_2022.json  31_03_2023.json  31_03_2024.json  31_12_2014.json  31_12_2015.json  31_12_2016.json  31_12_2018.json  31_12_2020.json  31_12_2021.json  31_12_2022.json  31_12_2023.json
output_files/rpe_data/: 30_06_2012.json  30_06_2013.json  30_06_2014.json  30_06_2015.json  30_06_2016.json  30_06_2017.json  30_06_2018.json  30_06_2019.json  30_06_2020.json  30_09_2012.json  30_09_2017.json  30_09_2018.json  30_09_2019.json  30_09_2020.json  31_03_2012.json  31_03_2015.json  31_03_2016.json  31_03_2019.json  31_03_2020.json  31_12_2012.json  31_12_2013.json  31_12_2014.json  31_12_2015.json  31_12_2018.json  31_12_2020.json
scraping/: exract_pdf_links.py  scrape.py
